<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeCamera</string>
    <string name="app_version">版本:V1.02</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strPoint">小圆点</string>
    <string name="start_use">开始使用</string>
	<string name="username">请输入邮箱/手机</string>
	<string name="login">登录</string>
	<string name="password">请输入密码</string>
	<string name="regist_user">注册用户</string>
	<string name="regist">注册</string>
	<string name="forget_password">忘记密码</string>
</resources>